--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="chat ai is a web app where you can ask any question and you will get the answer"
+      content="DiyetBot- Google Gemini ile çalışan bir yapay zeka botudur."
     />
     <meta
       name="keywords"
       content="chat, AI, artificial intelligence, messaging, web development"
     />
-    <title>Chat AI</title>
+    <title>Diyetisyen Bot</title>
   </head>
   <body>
     <div id="root"></div>
